--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - # skip
 
 script:
-  - go get -v github.com/Masterminds/glide 
+  - go get -u github.com/golang/dep/cmd/dep
   - make get-deps
   - make test
   - ls # debug purpose
