--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: go
+sudo: false
 go:
-- 1.11
-- master
+  - tip
+before_install:
+  - go get github.com/mattn/goveralls- master
 notifications:
   email: false
-install:
-- go get golang.org/x/tools/cmd/cover
-- go get github.com/mattn/goveralls
 script:
 - go get -u github.com/golang/dep/cmd/dep
 - make get-deps
 - make test
-- go test -v -covermode=count -coverprofile=coverage.out
-- $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALL_TOKEN
+- $GOPATH/bin/goveralls -service=travis-ci
 - ls
 env:
   global:
