--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 script:
 - go get -u github.com/golang/dep/cmd/dep
 - make get-deps
-- go test -race -coverprofile=coverage.txt -covermode=atomic
+- go test ./... -race -coverprofile=coverage.txt -covermode=atomic
 - $GOPATH/bin/goveralls -service=travis-ci
 - ls
 after_success:
